<resources>
    <string name="app_name">AndroidProyectov6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pedidos Online</string>
    <string name="nav_header_subtitle">Pedidos.Online@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">INICIO</string>
    <string name="menu_registro_Usuario">REGISTRO</string>
    <string name="menu_slideshow">sillog</string>
    <string name="menu_login">LOGIN</string>
    <string name="menu_restaurante">RESTAURANTE</string>

    <string name="title_activity_ver__restaurante">Ver_Restaurante</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_imagen1">imagen1</string>
    <string name="title_activity_login">login</string>

    <string name="title_InicioR">InicioR</string>
    <string name="title_Restaurante">Restaurante</string>
    <string name="title_Menu">Menu</string>
    <string name="sdsfsdfsdf">sdsfsdfsdf</string>
    <string name="title_activity_info__restaurante">Info_Restaurante</string>
    <string name="Estado">Estado</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login1">Login1</string>
    <string name="title_activity_google">Map</string>

</resources>